--- a/blocks/button/__like/_type/button__like_type_disabled.css
+++ b/blocks/button/__like/_type/button__like_type_disabled.css
@@ -1,4 +1,4 @@
-.button__like_disabled {
+.button__like_type_disabled {
   background: url(../../../../images/like-icon.svg) no-repeat center;
   width: 22px;
   height: 19px;
