--- a/blocks/button/_action/button_action_add.css
+++ b/blocks/button/_action/button_action_add.css
@@ -1,4 +1,4 @@
-.button__add {
+.button_action_add {
   background: url(../../../images/add-icon.svg) no-repeat center;
   width: 22px;
   height: 22px;
@@ -7,7 +7,7 @@
 }
 
 @media (max-width: 768px) {
-  .button__add {
+  .button_action_add {
     width: 16px;
     height: 16px;
     padding: 17px 130px 17px 131px;
