--- a/blocks/button/_action/button_action_edit.css
+++ b/blocks/button/_action/button_action_edit.css
@@ -1,4 +1,4 @@
-.button__edit {
+.button_action_edit {
   background: url(../../../images/edit-icon.svg) no-repeat center/50%;
   padding: 7px;
   width: 8px;
@@ -8,7 +8,7 @@
 }
 
 @media (max-width: 585px) {
-  .button__edit {
+  .button_action_edit {
     padding: 4px;
   }
 }
