--- a/blocks/card/__info/card__info.css
+++ b/blocks/card/__info/card__info.css
@@ -1,5 +1,5 @@
 .card__info {
-  padding: 0 15px 0 21px;
+  padding: 25px 15px 25px 21px;
   display: flex;
   justify-content: space-between;
   align-items: baseline;
