--- a/blocks/button/_action/button_action_like.css
+++ b/blocks/button/_action/button_action_like.css
@@ -1,4 +1,4 @@
-.button__like {
+.button_action_like {
   background: url(../../../images/like-icon.svg) no-repeat center;
   width: 22px;
   height: 19px;
