--- a/blocks/card/__info/card__info.css
+++ b/blocks/card/__info/card__info.css
@@ -2,5 +2,5 @@
   padding: 25px 15px 25px 21px;
   display: flex;
   justify-content: space-between;
-  align-items: baseline;
+  align-items: center;
 }
