--- a/blocks/button/_action/button_action_edit.css
+++ b/blocks/button/_action/button_action_edit.css
@@ -1,14 +1,13 @@
 .button_action_edit {
-  background: url(../../../images/edit-icon.svg) no-repeat center/50%;
-  padding: 7px;
-  width: 8px;
-  height: 8px;
+  background: url(../../../images/edit-icon.svg) no-repeat center;
+  padding: 11px;
   border: 1px solid #FFF;
   align-self: center;
 }
 
 @media (max-width: 585px) {
   .button_action_edit {
-    padding: 4px;
+    padding: 8px;
+    background-size: 7.5px;
   }
 }
