--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -8,4 +8,25 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
+  margin-bottom: 30px;
+}
+
+.popup__input:first-of-type {
+  margin-top: 48px;
+}
+
+.popup__input:last-of-type {
+  margin-bottom: 48px;
+}
+
+
+@media (max-width: 585px) {
+  .popup__input:first-of-type {
+    margin-top: 75px;
+  }
+
+  .popup__input:last-of-type {
+    margin-bottom: 45px;
+  }
+
 }
