--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,4 +1,14 @@
-.header__line_place_bottom {
+.header {
+
+  padding-bottom: 41px;
+}
+
+.header::after {
+  content: "";
+  width: 100%;
+  height: 100%;
+  top: 0;
+  right: 0;
   display: block;
   border-bottom: 1px solid #545454;
   opacity: .7;
@@ -6,7 +16,7 @@
 }
 
 @media (max-width: 585px) {
-  .header__line_place_bottom {
+  .header::after {
     margin-top: 32px;
   }
 }
