--- a/pages/index.css
+++ b/pages/index.css
@@ -12,9 +12,9 @@
 @import url(../blocks/popup/__input/popup__input.css);
 @import url(../blocks/popup/__submit-button/popup__submit-button.css);
 /* header */
+@import url(../blocks/header/header.css);
 @import url(../blocks/header/__link/header__link.css);
 @import url(../blocks/header/__logo/header__logo.css);
-@import url(../blocks/header/__line/_place/header__line_place_bottom.css);
 /* content */
 @import url(../blocks/content/content.css);
 /* profile */
