--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -11,6 +11,10 @@
   margin-bottom: 30px;
 }
 
+.popup__input::placeholder {
+  color: #C4C4C4;
+}
+
 .popup__input:first-of-type {
   margin-top: 48px;
 }
