--- a/blocks/button/__like/button__like.css
+++ b/blocks/button/__like/button__like.css
@@ -1,4 +1,4 @@
-.button_action_like {
+.button__like {
   background: url(../../../images/like-icon.svg) no-repeat center;
   width: 22px;
   height: 19px;
