refactor: добавить стили невалидной формы

--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,7 +1,7 @@
 .popup__container {
   position: fixed;
   display: grid;
-  grid-template-columns: repeat(2, max-content);
+  grid-template-columns: 430px 32px;
   grid-template-rows: repeat(2, auto);
   gap: 8px;
   z-index: 1;
@@ -9,7 +9,7 @@
 
 @media (max-width: 585px) {
   .popup__container {
-    grid-template-columns: max-content;
+    grid-template-columns: 282px;
     grid-template-rows: repeat(2, max-content);
     row-gap: 16px;
   }
