--- a/blocks/popup/__heading/popup__heading.css
+++ b/blocks/popup/__heading/popup__heading.css
@@ -2,11 +2,12 @@
   font-weight: 900;
   font-size: 24px;
   line-height: 1.1;
-  margin: 0;
+  margin: 0 0 48px 0;
 }
 
 @media (max-width: 585px) {
   .popup__heading {
     font-size: 18px;
+    margin-bottom: 75px
   }
 }
