--- a/blocks/popup/__submit-button/popup__submit-button.css
+++ b/blocks/popup/__submit-button/popup__submit-button.css
@@ -7,6 +7,7 @@
   cursor: pointer;
   font-size: 18px;
   transition: all .4s ease .2s;
+  margin-top: 48px;
 }
 
 .popup__submit-button:hover {
@@ -18,5 +19,6 @@
     font-size: 14px;
     padding: 14px 82px;
     min-width: 238px;
+    margin-top: 45px;
   }
 }
