--- a/blocks/popup/__input-error/popup__input-error.css
+++ b/blocks/popup/__input-error/popup__input-error.css
@@ -3,4 +3,20 @@
   font-weight: 400;
   font-size: 12px;
   line-height: 1;
+  padding-top: 5px;
+}
+
+.popup__input-error:first-of-type {
+  height: 30px;
+}
+
+.popup__input-error:last-of-type {
+  height: 48px;
+}
+
+
+@media (max-width: 585px) {
+  .popup__input-error:last-of-type {
+    height: 45px;
+  }
 }
