--- a/blocks/button/__like/_active/button__like_active.css
+++ b/blocks/button/__like/_active/button__like_active.css
@@ -1,3 +1,3 @@
 .button__like_active {
-  background: url(../../../../images/like-icon-active.svg);
+  background: url(../../../../images/like-icon-active.svg) no-repeat center;
 }
