--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -24,6 +24,7 @@
 @import url(../blocks/content/content.css);
 /* profile */
 @import url(../blocks/profile/profile.css);
+@import url(../blocks/profile/__avatar-container/profile__avatar-container.css);
 @import url(../blocks/profile/__avatar/profile__avatar.css);
 @import url(../blocks/profile/__info/profile__info.css);
 @import url(../blocks/profile/__title/profile__title.css);
@@ -33,6 +34,7 @@
 @import url(../blocks/button/button.css);
 @import url(../blocks/button/_action/button_action_add.css);
 @import url(../blocks/button/_action/button_action_edit.css);
+@import url(../blocks/button/_action/button_action_edit-avatar.css);
 @import url(../blocks/button/_action/button_action_close.css);
 @import url(../blocks/button/_action/button_action_delete.css);
 @import url(../blocks/button/__like/button__like.css);
