--- a/main.css
+++ b/main.css
@@ -20,7 +20,8 @@
 @media (max-width:585px){.header__logo{width:104px}}
 .content{display:flex;flex-direction:column;margin:40px 0 66px;row-gap:50px}@media (max-width:425px){.content{margin-bottom:48px;margin-top:39px;row-gap:36px}}
 .profile{align-items:center;-moz-column-gap:30px;column-gap:30px;display:flex}@media (max-width:880px){.profile{padding:0 72px}}@media (max-width:768px){.profile{flex-direction:column}}@media (max-width:585px){.profile{padding:0 19px}}
-.profile__avatar{background:url(3f3cda93da54f6f9181a.jpg) no-repeat 50%/cover;border-radius:100%;height:120px;min-width:120px}
+.profile__avatar-container{border-radius:100%;position:relative}
+.profile__avatar{border-radius:100%;cursor:pointer;display:block;height:120px;min-width:120px}
 .profile__info{color:#fff;margin-right:auto}@media (max-width:768px){.profile__info{justify-items:center;margin:26px 0 33px;max-width:282px}}
 .profile__title{-moz-column-gap:19px;column-gap:19px;display:flex;margin-bottom:7px}@media (max-width:585px){.profile__title{-moz-column-gap:10px;column-gap:10px;margin-left:30px}}
 .profile__name{font-size:42px;font-weight:500;line-height:1.1;margin:0;max-width:293px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}@media (max-width:585px){.profile__name{font-size:27px}}
@@ -28,6 +29,7 @@
 .button{border:none;cursor:pointer;transition:all .4s ease .2s}.button:hover{opacity:.5}
 .button_action_add{background:url(d86bb2edc2f6eadb96b7.svg) no-repeat 50%;border:2px solid #fff;padding:23px 73px}@media (max-width:768px){.button_action_add{background-size:16px;padding-left:139px;padding-right:139px}}
 .button_action_edit{align-self:center;background:url(8667ac4a523e8fc42e59.svg) no-repeat 50%;border:1px solid #fff;padding:11px}@media (max-width:585px){.button_action_edit{background-size:7.5px;padding:8px}}
+.button_action_edit-avatar{background:url(8667ac4a523e8fc42e59.svg) no-repeat 50%;background-size:25%;height:100%;left:0;opacity:0;padding:0;position:absolute;top:0;width:100%}.button_action_edit-avatar:hover{background-color:#000;opacity:.8}
 .button_action_close{background:url(ad98de32e342afafa118.svg) no-repeat 50%/100%;border:none;cursor:pointer;grid-column-start:2;height:32px;width:32px}.button_action_close:hover{opacity:.6}@media (max-width:585px){.button_action_close{grid-column-start:1;height:20px;justify-self:end;width:20px}}
 .button_action_delete{background:url(823b0cf1b0b7e9cb7cad.svg) no-repeat;height:19px;position:absolute;right:20px;top:20px;width:18px}
 .button__like{background:url(87ed371465c7a6a1cd01.svg) no-repeat 50%;height:19px;width:22px}
@@ -37,6 +39,10 @@
 .card__image{cursor:pointer;height:282px;-o-object-fit:cover;object-fit:cover;width:282px}
 .card__info{align-items:center;display:flex;justify-content:space-between;padding:25px 15px 25px 21px}
 .card__title{color:#000;font-size:24px;font-weight:900;margin:0;max-width:188px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}
+.card__like{display:flex;flex-direction:column;row-gap:3px}
+.card__like_counter{font-size:13px;margin:0;text-align:center}
 @media (max-width:880px){.footer{padding:0 72px}}@media (max-width:585px){.footer{padding:0 19px}}
 .footer__copyright{color:#545454;font-size:18px;font-weight:400;line-height:1.1;margin:0}@media (max-width:585px){.footer__copyright{font-size:14px}}
 
+
+/*# sourceMappingURL=main.css.map*/
