--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -1,6 +1,6 @@
 .profile__avatar {
   border-radius: 100%;
-  min-width: 120px;
+  width: 120px;
   height: 120px;
   cursor: pointer;
   display: block;
